Completed items and quote section using flexbox.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Example Site</title>
 </head>
 <body>
-    <div class="top-container">    
+    <div class="container">    
         <div id="navbar">
             <h1 class="logo">Logo</h1>
             <ul class="nav-links">
@@ -29,6 +29,38 @@
                 <img src="images/hero.jpg" alt="hero image">
             </div>    
         </div>
+
+        <div class="second-container">
+            <h2 class="subtitle">Random items</h2>
+            <div class="items">
+                <div class="item">
+                    <img src="images/item1.jpg" alt="item1">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="item">
+                    <img src="images/item2.jpg" alt="item2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="item">
+                    <img src="images/item3.jpg" alt="item3">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="item">
+                    <img src="images/item4.jpg" alt="item4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+        </div>
+
+        <div class="quote-container">
+            <div class="quote">
+            <p>My favorite things in life don't cost any money. It's really clear
+                that the most precious resource we all have is time.</p>
+            </div>
+            <div class="steve">  
+                <p>-Steve Jobs</p>
+            </div>      
+        </div>       
+                
     </div>    
 </body>
 </html>
