--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
                 <p>-Steve Jobs</p>
             </div>      
         </div>       
-                
+        
+        <div class="contact">
+            <div class="action-call">
+                <h2>Sign up now</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <button>Sign up</button>
+            </div>
+        </div>
     </div>    
 </body>
 </html>
