Completed footer and website according to Odin Project

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 <button>Sign up</button>
             </div>
         </div>
+
+        <div class="footer">
+            <p>&copy; Austin Bond 2024</p>
     </div>    
 </body>
 </html>
